# integrated-systems-leptos

./: .dockerignore  .gitignore  3  Cargo.toml  Dockerfile  README.md  deployment.toml  index.html  leptos-ui-deployment.yaml  leptos-ui-service.yaml  nvim-session  package-lock.json  start.ps1  test.txt
.github/workflows/: deploy.yml
src/: app.rs  components.rs  constants.rs  dtos.rs  lib.rs  main.rs  models.rs  pages.rs  pagination.rs  services.rs  ticket_status.rs  utils.rs
src/components/: body.rs  footer.rs  header.rs  login_partial.rs
src/pages/: home.rs  login.rs  orders.rs  register.rs  shopping_cart.rs  tickets.rs  user_management.rs  view_slots.rs
src/pages/tickets/: export.rs  index.rs
src/pages/user_management/: edit.rs  import.rs  index.rs
src/pages/view_slots/: create.rs  edit.rs  index.rs  tickets.rs
src/pages/view_slots/tickets/: create.rs  create_multiple.rs  edit.rs  index.rs
style/: output.css
