[package]
name = "integrated-systems-leptos"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
#leptos = { path = "../../leptos", default-features = false, features = [
#  "serde",
#] }
#leptos_actix = { path = "../../integrations/actix", optional = true }
#leptos_meta = { path = "../../meta", default-features = false }
#leptos_router = { path = "../../router", default-features = false }
gloo-net = { version = "0.2", features = ["http"] }
log = "0.4"
cfg-if = "1.0"

# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2.87" }
console_log = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# dependecies for server (enable when ssr set)
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", features = ["macros"], optional = true }
futures = { version = "0.3", optional = true }
simple_logger = { version = "4.0", optional = true }
leptos = { version = "0.4.9", default-features = false }
leptos_actix = { version = "0.4.8", optional = true }
leptos_meta = { version = "0.4.8", default-features = false }
leptos_router = { version = "0.4.8", default-features = false }
serde-wasm-bindgen = "0.5.0"
serde_repr = "0.1.16"
atomic = "0.6.0"
itertools = "0.11.0"
web-time = "0.2.0"
gloo-storage = "0.3.0"
web-sys = {version = "0.3.64", features = ["HtmlInputElement", "FileList", "File", "Blob", "ReadableStream", "FileReader", "FormData", "HtmlFormElement"] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

[dependencies.serde]
version = "1.0.183"

[dependencies.reqwest]
version = "0.11.18"
features = [
  "json",
  "multipart",
  "stream"
]

[dependencies.time]
version = "0.3.25"
features = [
  "serde",
  "formatting",
  "parsing",
  "macros",
  "wasm-bindgen",
  "local-offset"
]

[features]
default=["csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:console_log", "dep:console_error_panic_hook"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "dep:console_log", "dep:console_error_panic_hook"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_actix",
  "dep:actix-web",
  "dep:actix-files",
  "dep:futures",
  "dep:simple_logger",
]

[package.metadata.cargo-all-features]
denylist = [
  "actix-files",
  "actix-web",
  "console_error_panic_hook",
  "console_log",
  "futures",
  "leptos_actix",
  "simple_logger",
  "wasm-bindgen",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "tailwind"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/output.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-address = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "npx playwright test"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with tha tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
